<resources>
    <string name="app_name">Estereotipia</string>
    <string name="content_description">image</string>
    <string name="banner">ca-app-pub-4515698012373396/4573656208</string>
    <string name="interstitial">ca-app-pub-4515698012373396/5631649980</string>
    <string name="error_title">Ha ocurrido un problema</string>
    <string name="error_description">Inténtalo de nuevo más tarde</string>
    <string name="error_btn">Aceptar</string>
    <string name="exit_title">¿Seguro que quieres salir?</string>
    <string name="exit_description">Perderás todo el progreso del juego</string>
    <string name="exit_yes">SALIR</string>
    <string name="exit_no">QUEDARME</string>
    <string name="wait_text">Un momentito</string>
    <string name="vp_tab_cards">Cartas</string>
    <string name="vp_tab_questions">Preguntas</string>
    <string name="menu_bottom_games">Jugar</string>
    <string name="menu_bottom_decks">Barajas</string>
    <string name="menu_bottom_cards">Caras</string>
    <string name="menu_instructions">Instrucciones</string>
    <string name="menu_buy_physical_game_title">¡Ya disponible el juego de cartas!</string>
    <string name="menu_buy_physical_game_description">Si quieres dejar los móviles de lado, pulsa aquí para ver cómo puedes conseguir el juego de mesa oficial de Estereotipia.</string>
    <string name="menu_mode">Modo</string>
    <string name="menu_who_is_who">Quién es quién</string>
    <string name="menu_who_is_who_description">Clásico juego de <i>Quién es Quién</i>, pero con preguntas que te romperán los esquemas. Analiza la mente de tu rival y descubre su personaje.</string>
    <string name="menu_identities">Identidades</string>
    <string name="menu_identities_description">Una persona asigna en secreto tres identidades a tres personajes distintos. El resto de jugadores tratará de adivinar cuál ha sido dicha asignación.</string>
    <string name="menu_phrases">Respuestas cortas</string>
    <string name="menu_phrases_description">Trata de encontrar el personaje de tu rival antes de que encuentren el tuyo. Responde a las preguntas como lo haría tu personaje para guiar a tu oponente.</string>
    <string name="menu_how_to_play">Cómo jugar</string>
    <string name="menu_see_rrss">Instagram</string>
    <string name="menu_play">Jugar</string>
    <string name="menu_url_buy">Ver juego</string>
    <string name="menu_decks">Mis barajas</string>
    <string name="menu_custom_decks_description">Crea tus propias barajas con las cartas que más te gusten para jugar tanto en el modo <i>Quién es Quién</i> como en el modo <i>Respuestas cortas</i> y compártelas para jugar con tus amigos.</string>
    <string name="menu_custom_decks">Ver mis barajas</string>
    <string name="menu_custom_decks_create">Crear baraja</string>
    <string name="menu_all_cards">Las caras, Juan, las caras</string>
    <string name="menu_all_cards_description_one">Pulsa aquí para ver todas las cartas de personaje que contiene Estereotipia.</string>
    <string name="menu_all_cards_description_two">Échales un vistazo para crear tus propias barajas de cartas.</string>
    <string name="first_access_wow">¡Vaya!</string>
    <string name="first_access_first_time">Parece que esta es\ntu primera vez por aquí.</string>
    <string name="first_access_description_one">¿Quieres abrir las instrucciones para <b>aprender a jugar</b> o eres de esas personas que van a lo loco?</string>
    <string name="first_access_open_instructions">Aprender</string>
    <string name="first_access_close">¡Ciérrame esto ya!</string>
    <string name="phrases_hint">Escribe aquí...</string>
    <string name="phrases_hint_list">...</string>
    <string name="identities_initial_dialog">A este modo se juega con el teléfono en <b>horizontal</b></string>
    <string name="identities_initial_continue">Continuar</string>
    <string name="identities_initial_instructions">¿Cómo se juega?</string>
    <string name="identities_toolbar">Identidades</string>
    <string name="identities_continue">Continuar</string>
    <string name="identities_one">1</string>
    <string name="identities_two">2</string>
    <string name="identities_three">3</string>
    <string name="identities_card_one">1.</string>
    <string name="identities_card_two">2.</string>
    <string name="identities_card_three">3.</string>
    <string name="identities_card_example_title">Ha sido detenido por…</string>
    <string name="identities_card_example_option1">Hacer nudismo</string>
    <string name="identities_card_example_option2">Irse sin pagar de un restaurante</string>
    <string name="identities_card_example_option3">Meterse en una pelea</string>
    <string name="identities_instructions_title">Modo identidades</string>
    <string name="identities_instructions_1">Lo primero es girar el móvil porque a este modo se juega con el móvil en <b>horizontal</b></string>
    <string name="identities_instructions_2">Para este modo de juego se necesita <b>un solo móvil</b> y mínimo <b>dos personas</b></string>
    <string name="identities_instructions_3">¿Qué hay que hacer?</string>
    <string name="identities_instructions_4">Aparecerán tres personajes y tres fichas numeradas del <b>1 al 3</b></string>
    <string name="identities_instructions_5">También se mostrará una carta con tres características, identidades, profesiones o lo que sea, como esta:</string>
    <string name="identities_instructions_6">(El contenido de la carta también se muestra en la pantalla inferior izquierda)</string>
    <string name="identities_instructions_7">Una persona, <b>en secreto</b>, tiene que asigar cada ficha naranja a un personaje distinto. Las características de la carta van numeradas del 1 al 3, <b>coincidiendo</b> con los numeros de las fichas</string>
    <string name="identities_instructions_8">Para asignar una ficha simplemente <b>arrastra la ficha</b> hacia la cara del personaje</string>
    <string name="choice_dialog_yes">¡Sí!</string>
    <string name="choice_dialog_no">No</string>
    <string name="questions_do_question">Nueva pregunta</string>
    <string name="questions_what_now_1">Tienes que <b>adivinar</b> la carta de tu rival antes de que tu rival adivine la tuya.</string>
    <string name="questions_what_now_2">Para saber cuál es la carta de tu rival tienes que hacerle <b>preguntas</b>.</string>
    <string name="questions_what_now_3"><b>¿De dónde saco las preguntas?</b></string>
    <string name="questions_what_now_4">Del botón <i>"Nueva pregunta"</i>.</string>
    <string name="questions_what_now_5">Alternádote con tu rival tendréis que ir haciéndoos preguntas e ir descartando cartas hasta adivinar qué personaje le ha tocado a tu rival.</string>
    <string name="questions_what_now_6">Podrás hacer hasta <b>10 preguntas</b> por partida y tendrás <b>2 oportunidades</b> para acertar la carta de tu rival</string>
    <string name="questions_what_now_7">Para marcar tu decision sobre qué personaje es el de tu rival, selecciona la carta correspondiente y pulsa el icono</string>
    <string name="questions_what_now_8"><b>¿Necesitas más ayuda?</b> Pulsa</string>
    <string name="instructions_how_to_play_first_of_all">Este modo es una especie de <b>Quién es Quién</b> pero con <b>preguntas totalmente subjetivas.</b></string>
    <string name="instructions_how_to_play_details_1">Lo primero de todo es saber que <b>para ganar</b> hay que ser el primero en <b>adivinar el personaje del equipo rival</b>.</string>
    <string name="instructions_how_to_play_details_2">Para adivinar el personaje de tu contrincante podrás hacer máximo <b>10 preguntas</b> y tendrás <b>2 oportunidades</b> para acertar.</string>
    <string name="instructions_how_to_play_details_3"><i>No existe una respuesta correcta, para responder las preguntas que te hará tú rival tendrás que exprimir al máximo tus prejuicios.</i></string>
    <string name="instructions_how_to_play_details_4">Ahora bien, <u>¿cómo se juega?</u></string>
    <string name="instructions_how_to_play_details_5">Necesitaréis <b>dos móviles y dos equipos</b> <i>(un móvil en cada equipo)</i></string>
    <string name="instructions_how_to_play_details_6">En ambos móviles deberéis <b>seleccionar la misma baraja de cartas</b>, si no el juego no tendrá sentido.</string>
    <string name="instructions_how_to_play_details_7">Al inicio de la partida <b>se seleccionará una carta aleatoriamente</b>, ese será tu personaje y la carta que tendrá que tratará de adivinar tu rival.</string>
    <string name="instructions_how_to_play_details_8">Una vez ambos equipos tengan claro su personaje, decidid quién empieza a hacer las preguntas.</string>
    <string name="instructions_how_to_play_details_9">Para hacer una pregunta múevete hasta la pestaña <i>preguntas</i> y selecciona el botón <i>Nueva pregunta</i></string>
    <string name="instructions_how_to_play_details_10">Cada vez pregunta un equipo de <b>manera alterna</b>.</string>
    <string name="instructions_how_to_play_details_11">Los personajes que creáis que <b>no</b> son los de vuestro rival pueden descartarse con el botón</string>
    <string name="instructions_how_to_play_details_12">Pero no preocuparse, un personaje puede descartarse y volver a entrar en juego todas las veces que queráis.</string>
    <string name="instructions_how_to_play_details_12_1">Si crees que un personaje puede ser el de tu rival <b>pero no estás del todo seguro</b> pulsa este botón para marcarlo como <i>sospechoso</i>.</string>
    <string name="instructions_how_to_play_details_12_2">Esto no es nada definitivo, simplemente sirve para aclarar tus ideas.</string>
    <string name="instructions_how_to_play_details_13"><b>En cualquier momento se puede hacer una apuesta para tratar de adivinar el personaje del rival</b> pulsando el botón</string>
    <string name="instructions_how_to_play_details_14">El numerito indica las oportunidades que tienes disponibles.</string>
    <string name="instructions_how_to_play_details_15">Una vez hagas la apuesta pregúntale a tu rival si es ese su personaje, tiene que responderte <b>con sinceridad</b>.</string>
    <string name="instructions_how_to_play_details_16">Si te quedas sin oportunidades <b>perderás la partida</b> y no podrás ni preguntar ni apostar nuevos personajes, pero tendrás que seguir contestando las preguntas de tu rival hasta que finalice sus dos oportunidades o adivine tu personaje.</string>
    <string name="instructions_how_to_play_details_17">Si eres el primero en adivinar el personaje de tu rival <b>ganas la partida</b>.</string>
    <string name="instructions_how_many_opportunities_number">2</string>
    <string name="instructions_how_many_opportunities_number_text">El número representa los intentos que te quedan.</string>
    <string name="instructions_how_many_opportunities_details_1">Tienes <b>dos oportunidades</b> para adivinar el personaje de tu rival.</string>
    <string name="instructions_how_many_opportunities_details_2">Para hacer tu apuesta selecciona la carta que creas que es la de tu rival y pulsa el botón con el siguiente icono:</string>
    <string name="instructions_how_many_opportunities_details_3">Si <b>aciertas</b> y has sido el primer equipo en acertar, <b>has ganado.</b></string>
    <string name="instructions_how_many_opportunities_details_4">Si fallas tendrás una <b>segunda oportunidad</b> para repetir el proceso.</string>
    <string name="instructions_how_many_opportunities_details_5">Si fallas por segunda vez seguirás en juego pero sin poder hacer preguntas, solo respondiendo y rezando para que tu rival no adivine tu personaje.</string>
    <string name="instructions_how_many_opportunities_details_6"><b>El juego termina</b> cuando uno de los dos equipos <b>adivina la carta</b> del equipo rival o cuando <b>ambos equipos fallan</b> las dos oportunidades que tienen.</string>
</resources>