<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/Instructions_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/questions_what_now_1"
        android:textSize="18sp" />

    <TextView
        style="@style/Instructions_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/questions_what_now_2"
        android:textSize="18sp" />

    <TextView
        style="@style/Instructions_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/questions_what_now_3"
        android:textSize="18sp" />

    <TextView
        style="@style/Instructions_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/questions_what_now_4"
        android:textSize="18sp" />

    <TextView
        style="@style/Instructions_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/questions_what_now_5"
        android:textSize="18sp" />

    <TextView
        style="@style/Instructions_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/questions_what_now_6"
        android:textSize="18sp" />

    <TextView
        style="@style/Instructions_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/questions_what_now_7"
        android:textSize="18sp" />

    <TextView
        style="@style/Instructions_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/questions_what_now_8"
        android:textSize="18sp" />

    <TextView
        style="@style/Instructions_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/questions_what_now_9"
        android:textSize="18sp" />

</LinearLayout>